--- a/home.css
+++ b/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&family=Montserrat:wght@100;400&family=Nunito:wght@200;600;700&family=Open+Sans:wght@300&family=Roboto:wght@100;300;400&display=swap');
 *{
   padding: 0;
   margin: 0;
@@ -6,7 +6,7 @@
   text-decoration: none;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 .sidebar {
   position: fixed;
@@ -16,28 +16,22 @@ body {
   background: rgba(0, 0, 0, 1);
   transition: all .5s ease;
 }
-.sidebar header {
-  text-align: center;
-  background: rgba(0, 0, 0, 1);
-  user-select: none;
-}
-header a{
-  font-size: 22px;
-  color: white;
-  line-height: 70px;
-}
+
 .sidebar ul a{
   display: block;
   height: 100%;
   width: 100%;
   line-height: 65px;
-  font-size: 20px;
+  font-size: 16px;
   color: white;
   padding-left: 40px;
   box-sizing: border-box;
   /* border-bottom: 1px solid black; */
   border-top: 2px solid rgba(255,255,255,.2);
   transition: .4s;
+}
+.home{
+  margin-top: 200px;
 }
 ul li:hover a{
   padding-left: 50px;
@@ -67,6 +61,7 @@ label #cancel{
   left: -195px;
   top: 17px;
   font-size: 18px;
+  margin-left: 20px;
   color: #f4f4f4;
   padding: 4px 9px;
   transition: all .5s ease;
@@ -86,7 +81,7 @@ label #cancel{
   margin-left: 250px;
 }
 section{
-  background: url(./images/Black\ Aesthethic\ Education\ Online\ Portfolio.png) no-repeat;
+  background: url(./Images/Black\ Aesthethic\ Education\ Online\ Portfolio\ copy\ 2.png) no-repeat;
   background-position: center;
   background-size: cover;
  width: 100%;
@@ -96,14 +91,15 @@ section{
 } 
 
 .fa-brands{
-    font-size: 24px;
+    font-size: 20px;
     color: #f4f4f4;
-    margin: 15px;
-    margin-top: 350px;
+    margin: 14px;
+    margin-left: 20px;
+    margin-top: 180px;
     transition: all .5s;
 }
 .fa-brands:hover{
     padding-left: 10px;
-    color: #393333;
+    color: rgba(96, 87, 87, 3);
 }
 
