--- a/about.css
+++ b/about.css
@@ -56,7 +56,7 @@ body{
   }
   .navbar ul li:hover a{
     padding-left: 50px;
-    border-bottom: 2px solid rgba(255,255,255,.2);
+    /* border-bottom: 2px solid rgba(255,255,255,.2); */
   }
   .navbar ul a i{
     margin-right: 16px;
@@ -66,7 +66,7 @@ body{
     color: #f4f4f4;
     margin: 5px;
     margin-left: 20px;
-    margin-top: 140px;
+    margin-top: 150px;
     transition: all .5s;
 }
 .fa-brands:hover{
@@ -99,7 +99,7 @@ h1{
 line-height: 1.5em;
 }
 .container{
-  margin-top: 150px;
+  margin-top: 100px;
   margin-left: 400px;
   position: absolute;
 
