--- a/home.css
+++ b/home.css
@@ -5,6 +5,9 @@
   list-style: none;
   text-decoration: none;
 }
+a{
+  color: #f4f4f4;
+}
 body {
   font-family: 'Montserrat', sans-serif;
 }
@@ -27,7 +30,7 @@ body {
   padding-left: 40px;
   box-sizing: border-box;
   /* border-bottom: 1px solid black; */
-  border-top: 2px solid rgba(255,255,255,.2);
+  /* border-top: 2px solid rgba(255,255,255,.2); */
   transition: .4s;
 }
 .home{
@@ -95,11 +98,24 @@ section{
     color: #f4f4f4;
     margin: 14px;
     margin-left: 20px;
-    margin-top: 180px;
+    margin-top: 150px;
     transition: all .5s;
 }
 .fa-brands:hover{
     padding-left: 10px;
     color: rgba(96, 87, 87, 3);
 }
+
+.btn{
+  background: transparent;
+  width: 70px;
+  height: 20px;
+  padding: 10px;
+  border: 1px solid #f4f4f4;
+  border-radius: 4px;
+  text-align: center;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
 
